--- a/src/App/Chess/Figure/Figure.css
+++ b/src/App/Chess/Figure/Figure.css
@@ -6,13 +6,12 @@
     font-size: calc(var(--tile-size) * 0.8);
     text-shadow: 0 0 10px #6e6e6e80;
     position: relative;
-    cursor: default;
+    cursor: pointer;
 }
 
-.figure-base::before{
+.Tile:not(.valid) > .figure-base::before{
     border: 0px solid rgb(100, 100, 100);
     border-radius: 50%;
-    cursor: pointer;
     content: " ";
     width: 0px;
     height: 0px;
@@ -25,7 +24,7 @@
     transition: 0.3s;
 }
 
-.figure-base:hover::before{
+.Tile:not(.valid) > .figure-base:hover::before{
     border: 2px solid rgb(100, 100, 100);
     width: calc(var(--tile-size) * 0.8);
     height: calc(var(--tile-size) * 0.8);
